--- a/css/theme.css
+++ b/css/theme.css
@@ -5,9 +5,9 @@
 }
 
 :root{
-    --primary-color: hsl(206deg 68% 34%);
-    --secondary-color: rgb(20, 115, 187);
-    --headline-color: rgb(220, 176, 17);
+    --primary-color: rgb(1, 45, 79);
+    --secondary-color: rgb(50, 105, 255);
+    --headline-color: rgb(253, 195, 2);
     --text-color:#b7f5ff; 
     --hover-color: #1191a4; 
     
