--- a/css/footer.css
+++ b/css/footer.css
@@ -4,6 +4,7 @@ footer{
     position: absolute;
     bottom: 0px;
     width: 100%;
+    height: 20vh;
 }
 .foot-wrapper{
     background-color: var(--primary-color);
@@ -24,6 +25,7 @@ footer{
 .foot-wrapper h3{
     color: var(--headline-color);
     margin-bottom: 1vh;
+    text-align: center;
 }
 
 .list-wrapper{
