--- a/css/shop.css
+++ b/css/shop.css
@@ -1,6 +1,6 @@
 .card-wrapper{
     width: 128px;
-    height: 150px;
+    height: 181px;
     gap: 10px;
     background-color: rgba(207, 207, 207, 0.504);
     padding: 5px 9px;
@@ -25,6 +25,17 @@
 .info-wrapper{
     display: flex;
     color: rgb(52, 52, 52);
-    flex-direction: row;
+    flex-direction: column;
+}
+
+.info-wrapper a{
+    text-align: center;
+    text-decoration: none;
+    background-color: var(--secondary-color);
+    padding: 4px 6px;
+}
+
+.price-info{
+    display: flex;
     justify-content: space-between;
 }
