info card with event licener

--- a/css/shop.css
+++ b/css/shop.css
@@ -39,3 +39,11 @@
     display: flex;
     justify-content: space-between;
 }
+
+.info-card{
+    top: 0;
+    background-color: red;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
